Add package.json and yarn.lock with deploy scripts

--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "weather-forecast",
   "private": true,
+  "homepage": "https://github.com/JonathamCarvalho/Previs-o-do-tempo.git",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "styled-components": "^6.1.19"
